--- a/trunk/resource.qrc
+++ b/trunk/resource.qrc
@@ -39,18 +39,56 @@
         <file>images/adquisicionDatos/babelEncendidoqnx5failqnx6ok.png</file>
         <file>images/adquisicionDatos/babelEncendidoqnx5okqnx6fail.png</file>
         <file>images/adquisicionDatos/babelEncendidoqnx5okqnx6ok.png</file>
+        <file>images/adquisicionDatos/babelqnx5qnx6Encendidaqnx1qnx2Apagada.png</file>
+        <file>images/adquisicionDatos/babelqnx5qnx6Encendidaqnx1qnx3Apagada.png</file>
+        <file>images/adquisicionDatos/babelqnx5qnx6Encendidaqnx1qnx4Apagada.png</file>
+        <file>images/adquisicionDatos/qnx1Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx1Apagadaqnx5Encendida.png</file>
+        <file>images/adquisicionDatos/qnx1Apagadaqnxqnx2Apagadaqnx5Encendida.png</file>
+        <file>images/adquisicionDatos/qnx1ApagadaTodasPrendidas.png</file>
         <file>images/adquisicionDatos/qnx1Encendida.png</file>
+        <file>images/adquisicionDatos/qnx1EncendidaFail.png</file>
+        <file>images/adquisicionDatos/qnx1qnx2qnx3ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx1qnx2qnx3qnx4ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx1qnx2qnx3qnx4Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx1qnx2qnx4ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx1qnx3qnx4ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx2ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx2Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx2Apagadaqnx5Encendida.png</file>
         <file>images/adquisicionDatos/qnx2Encendida.png</file>
+        <file>images/adquisicionDatos/qnx2EncendidaFail.png</file>
+        <file>images/adquisicionDatos/qnx2qnx3Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx2qnx3qnx4ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx2qnx3qnx4Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx2qnx4Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx3ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx3Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx3Apagadaqnx6Encendida.png</file>
         <file>images/adquisicionDatos/qnx3Encendida.png</file>
+        <file>images/adquisicionDatos/qnx3EncendidaFail.png</file>
+        <file>images/adquisicionDatos/qnx3qnx4ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx3qnx4Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx4ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx4Apagadaqnx5Apagadaqnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx4Apagadaqnx5Apagadaqnx6Encendida.png</file>
+        <file>images/adquisicionDatos/qnx4Apagadaqnx6Encendida.png</file>
         <file>images/adquisicionDatos/qnx4Encendida.png</file>
+        <file>images/adquisicionDatos/qnx4EncendidaFail.png</file>
+        <file>images/adquisicionDatos/qnx5ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx5Apagadaqnx1Encendidaqnx2Encendida.png</file>
         <file>images/adquisicionDatos/qnx5Encendidaqnx1failqnx2ok.png</file>
         <file>images/adquisicionDatos/qnx5Encendidaqnx1okqnx2ok.png</file>
         <file>images/adquisicionDatos/qnx5Encendidoqnx1failqnx2fail.png</file>
         <file>images/adquisicionDatos/qnx5Encendidoqnx1okqnx2fail.png</file>
+        <file>images/adquisicionDatos/qnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx6Apagadaqnx3Encendidaqnx4Encendida.png</file>
         <file>images/adquisicionDatos/qnx6Encendidoqnx3failqnx4fail.png</file>
         <file>images/adquisicionDatos/qnx6Encendidoqnx3failqnx4ok.png</file>
         <file>images/adquisicionDatos/qnx6Encendidoqnx3okqnx4fail.png</file>
         <file>images/adquisicionDatos/qnx6Encendidoqnx3okqnx4ok.png</file>
         <file>images/adquisicionDatos/sistemaDatos.png</file>
+        <file>images/adquisicionDatos/qnx5qnx6ApagadaBabelEncendida.png</file>
+        <file>images/adquisicionDatos/qnx1ApagadaBabelEncendida.png</file>
     </qresource>
 </RCC>
