--- a/trunk/gui/paneladministrativo.ui
+++ b/trunk/gui/paneladministrativo.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>625</width>
+    <width>633</width>
     <height>421</height>
    </rect>
   </property>
@@ -16,10 +16,10 @@
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>10</y>
      <width>621</width>
-     <height>401</height>
+     <height>361</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -34,11 +34,6 @@
    <property name="currentIndex">
     <number>0</number>
    </property>
-   <widget class="QWidget" name="tab">
-    <attribute name="title">
-     <string>Protocolo</string>
-    </attribute>
-   </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
      <string>Prueba</string>
@@ -55,12 +50,12 @@
      <property name="title">
       <string>Condiciones Del Cielo</string>
      </property>
-     <widget class="QCheckBox" name="NormalesCheckBox">
+     <widget class="QRadioButton" name="NormalesCheckBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>97</width>
+        <width>116</width>
         <height>22</height>
        </rect>
       </property>
@@ -68,25 +63,25 @@
        <string>Normales</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="muchoVientoCheckBox">
+     <widget class="QRadioButton" name="muchoVientoCheckBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>40</y>
-        <width>121</width>
+        <width>116</width>
         <height>22</height>
        </rect>
       </property>
       <property name="text">
-       <string>Mucho Viento</string>
+       <string>Viento</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="nubladoCheckBox">
+     <widget class="QRadioButton" name="nubladoCheckBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>60</y>
-        <width>97</width>
+        <width>151</width>
         <height>22</height>
        </rect>
       </property>
@@ -101,13 +96,13 @@
        <x>10</x>
        <y>100</y>
        <width>281</width>
-       <height>121</height>
+       <height>131</height>
       </rect>
      </property>
      <property name="title">
       <string>Telescopio</string>
      </property>
-     <widget class="QCheckBox" name="checkBox">
+     <widget class="QCheckBox" name="checkBoxDedos">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -120,7 +115,7 @@
        <string>Mala posicion de los dedos</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="checkBox_2">
+     <widget class="QCheckBox" name="checkBoxFoco">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -133,7 +128,7 @@
        <string>Mal Foco</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="checkBox_3">
+     <widget class="QCheckBox" name="checkBoxObturador">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -146,7 +141,7 @@
        <string>Obturador sin abrir</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="checkBox_4">
+     <widget class="QCheckBox" name="checkBoxPrisma">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -159,21 +154,385 @@
        <string>Imagenes defectuosas con el prisma</string>
       </property>
      </widget>
+     <widget class="QCheckBox" name="checkBoxConexion">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>100</y>
+        <width>281</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Fallas de conexion</string>
+      </property>
+     </widget>
     </widget>
-    <widget class="QDialogButtonBox" name="buttonBox">
+    <widget class="QGroupBox" name="groupBox_5">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>250</y>
-       <width>176</width>
-       <height>27</height>
+       <x>420</x>
+       <y>80</y>
+       <width>111</width>
+       <height>80</height>
       </rect>
      </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     <property name="title">
+      <string>Cargar Prueba</string>
+     </property>
+     <widget class="QPushButton" name="pushButtonCargarPrueba">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>98</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Cargar</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QLabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>240</y>
+       <width>121</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Nombre Prueba:</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="textEditNombrePrueba">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>240</y>
+       <width>201</width>
+       <height>78</height>
+      </rect>
      </property>
     </widget>
    </widget>
+   <widget class="QWidget" name="tab">
+    <attribute name="title">
+     <string>Protocolo</string>
+    </attribute>
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>261</width>
+       <height>141</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Filtros</string>
+     </property>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>30</y>
+        <width>61</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Filtro 1:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>60</y>
+        <width>61</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Filtro 2:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>90</y>
+        <width>61</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Filtro 3:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>120</y>
+        <width>61</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Filtro 4:</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBoxFiltro1">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>20</y>
+        <width>191</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBoxFiltro2">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>50</y>
+        <width>191</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBoxFiltro3">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>80</y>
+        <width>191</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBoxFiltro4">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>110</y>
+        <width>191</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_4">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>160</y>
+       <width>261</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Coordenadas</string>
+     </property>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>91</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Declinacion:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>111</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Angulo Horario:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEditDeclinacion">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>20</y>
+        <width>131</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEditAnguloHorario">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>50</y>
+        <width>131</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>30</y>
+       <width>151</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Tipo de Observacion:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>60</y>
+       <width>71</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Duracion:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>120</y>
+       <width>91</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Proyecto:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>90</y>
+       <width>101</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Instrumento:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEditTipoObservacion">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>20</y>
+       <width>191</width>
+       <height>27</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEditDuracion">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>50</y>
+       <width>191</width>
+       <height>27</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBoxInstrumento">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>80</y>
+       <width>191</width>
+       <height>27</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="textEditProyecto">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>120</y>
+       <width>191</width>
+       <height>121</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tab_3">
+    <attribute name="title">
+     <string>Asignar</string>
+    </attribute>
+    <widget class="QComboBox" name="comboBoxUsuario">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>130</y>
+       <width>401</width>
+       <height>27</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>140</y>
+       <width>131</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Usuario:</string>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="pushButtonAceptar">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>380</y>
+     <width>98</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Acepptar</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonLimpiar">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>380</y>
+     <width>98</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Limpiar</string>
+   </property>
   </widget>
  </widget>
  <resources/>
